syntax = "proto3";

option java_multiple_files = true;
option java_package = "mango.sep3.databaseaccess.protobuf";

service FarmService{
  rpc CreateFarm(Farm) returns(Farm);
  rpc GetFarm(Text) returns(Farm);
  rpc GetFarmByName(Text) returns(Farm);
  rpc GetFarms(Farmer) returns(Farms);
  rpc UpdateFarm(FarmUpdate) returns(Farm);
  rpc GetAllCustomersUncompletedOrder(Text) returns(RepeatedUsername);
}

service OfferService{
  rpc CreateOffer(Offer) returns(Offer);
  rpc GetOffers(Void) returns(OfferItems);
  rpc GetOfferById(Id) returns(Offer);
  rpc GetOffersByFarmName(Text) returns(OfferItems);
}

service UserService{
  rpc RegisterUser(UserAuth) returns (UserAuth);
  rpc RegisterFarmer(Farmer) returns (Farmer);
  rpc RegisterCustomer(Customer) returns (Customer);
  rpc GetUserAuthByUsername(Text) returns(UserAuth);

  rpc GetUserByUsername(Text) returns (User);
  rpc GetCustomer(Text) returns(Customer);
  rpc GetFarmer(Text) returns(Farmer);
  rpc UpdateCustomer(CustomerUpdate) returns(Void);

}

service OrderService{
  rpc CreateOrderOffers(OrderOffers) returns(Void);
  rpc CreateOrders(Orders) returns(Void);
  rpc GetAllOrders(Text) returns(Orders);
  rpc GetOrderOffers(Text) returns(OrderOffers);
  rpc CompleteOrder(Id) returns(Void);
  rpc DeleteOrder(Text) returns(Void);
  rpc GetOrderById(Id) returns(Order);
}

service CartOfferService{
  rpc AddToCart(CartOffer) returns(Void);
  rpc GetAllCartOffers(Username) returns(CartOffers);
  rpc DeleteAllCartOffers(Username) returns(Void);
  rpc GetById(Id) returns(CartOffer);
  rpc DeleteCartOffer(Id) returns(Void);
}

service NotificationService{
  rpc AddNotifications(RepeatedNotification) returns(Void);
  rpc GetNotifications(Text) returns(stream Notification);
  rpc DeleteNotification(Notification) returns(Void);
}

message UserAuth{
  string username = 1;
  string hash = 2;
  string salt = 3;
}

message User{
  string username = 1;
  string firstname = 2;
  string lastname = 3;
}

message Farm{
  string name = 1;
  Address address =2;
  Farmer farmer = 3;
  optional string farmStatus = 5;
  optional int32 deliveryDistance = 6;
  string phone = 7;
  string iconPath = 8;
}

message FarmUpdate{
  string name = 1;
  string status = 2;
}

message Farms{
  repeated Farm farms = 1;
}

message Offer{
  int32 id = 1;
  string name = 2;
  int32 quantity = 3;
  string unit = 4;
  double price = 5;
  int32 collectionOption = 6;
  optional string description = 7;
  string farmName = 8;
}

message OfferCreation{
  string name = 1;
  int32 quantity = 2;
  string unit = 3;
  double price = 4;
  bool delivery = 5;
  bool pickUp = 6;
  bool pickYourOwn = 7;
  optional string description = 8;
  string ImagePath = 9;
}

message OrderOffer{
  int32 id = 1;
  Offer offer = 2;
  int32 quantity = 3;
  string username = 4;
  int32 collectionOption = 5;
}

message OrderOffers{
  repeated OrderOffer orderOffers = 1;
}

message Order{
  int32 id = 1;
  repeated OrderOffer orderOffers = 2;
  bool isDone = 3;
  string farmName = 4;
  int32 collectionOption = 5;
  string username = 6;
}
message Orders{
  repeated Order orders = 1;
}

message OfferItems{
  repeated Offer offers = 1;
}

message Customer{
  string username = 1;
  string firstname = 2;
  string lastname = 3;
  string phone = 4;
  Address address = 5;
}

message CustomerUpdate{
  string username = 1;
  optional string phone = 2;
  optional string city = 3;
  optional string street = 4;
  optional string zip = 5;
  optional double longitude = 6;
  optional double latitude = 7;
}

message Farmer{
  string username = 1;
  string firstname = 2;
  string lastname = 3;
}

message Address{
  string city = 1;
  string street = 2;
  string zip = 3;
  double latitude = 4;
  double longitude = 5;
}

message Void{}

message Text{
  string text = 1;
}
message CartOffer{
  int32 id = 1;
  Offer offer = 2;
  int32 quantity = 3;
  string username = 4;
  int32 collectionOption = 5;
}

message CartOffers{
  repeated CartOffer cartOffers = 1;
}

message Username{
  string username = 1;
}

message Id{
  int32 id =1;
}

message Notification{
  int64 id = 1;
  string toUsername = 2;
  string text = 3;
  int64 createdAt = 4;
}

message RepeatedNotification{
  repeated Notification notifications = 1;
}

message RepeatedUsername{
  repeated Text username= 1;
}
